--- a/app/css/menu.css
+++ b/app/css/menu.css
@@ -35,3 +35,7 @@ html, body {
     -webkit-transform: scale(0.70);
     -moz-transform: scale(0.70);
 }
+.dropdownmenu {
+    padding: 0 0 0 0;
+    background-color: white;
+}
